publish temp version

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "protractor-flake",
-  "description": "A wrapper for protractor to automatically re-run failed specs for a specific number of attempts",
+  "name": "pflake",
+  "description": "Fork of protractor-flake - A wrapper for protractor to automatically re-run failed specs for a specific number of attempts",
   "main": "dist/index.js",
   "repository": {
     "type": "git",
