--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "pflake",
+  "name": "@theandrewlane/pflake",
   "description": "Fork of protractor-flake - A wrapper for protractor to automatically re-run failed specs for a specific number of attempts",
   "main": "dist/index.js",
   "repository": {
